# University-Programming-Classes

./: CMakeLists.txt  README.md
Bonus Question/: a.out  main.c  scheduler.c  scheduler.h
Class/ClassCodes/: a.out  array.c  utils.c  utils.h
Class/Matrix/: main.c  matrix.c  matrix.h
Class/Max/: main.c  max.c  max.h
Class/Memory Management/: a.out  callocExample.c  mallocExample.c  memoryFree.c  pointerAllocation.c  practice.c  reallocExample.c  workedExample1.c
Class/Practice Problems/: a.out  snakesandladders.c  types.h  types.h.pch  utils.c  utils.h  utils.h.pch
Class/Struct/: a.out  dynamicArraysOfStructures.c  main.c  structExample.c  structExample.out  structures.c  structures.h  structures.h.pch
Class/TheMovieDatabase/: types.h  utils.c  utils.h
Exam 2/: a.out  q1.c  q2.c  q3.c
Graphics/: a.out  graphics.c
Labs/Lab 1/: lab1_profile.c  lab1_variables.c
Labs/Lab 10/: a.out  band.c  dairy.c  roster.c  schedule.c
Labs/Lab 11/: main.c  map.c  map.h
Labs/Lab 12/: main.c  secrets.c  secrets.h
Labs/Lab 7/: copy.c  copy.out  memory.c  memory.out  range.c  range.out  riddler.c  riddler.out
Labs/Lab 8/: a.out  dictionary.c  matrix_mult.c  tensor.c
Labs/Lab 8/dictionary.dSYM/Contents/Resources/DWARF/: dictionary
Labs/Lab 8/dictionary.dSYM/Contents/Resources/Relocations/aarch64/: dictionary.yml
Labs/Lab 9/: cipher.c  clues.c  hoard.c  secrets.c
Robot Homework/: CMakeLists.txt  a.out  main.c  map.c  map.h  objects.h  rover.c  rover.h  rover.h.pch
